--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,6 @@
-name = "your-project-name"
+
 compatibility_date = "2025-05-30"
-main = "./.next"  # Next.js 默认构建输出目录
+
+[site]
+bucket = "./.next"  # Next.js 构建输出目录
+entry-point = "workers-site"  # 虚拟目录名，可自定义
