--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -46,11 +49,11 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "13.4.19",
     "next-themes": "^0.4.4",
-    "react": "^19",
+    "react": "18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -68,9 +71,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  },
+  
   "resolutions": {
     "date-fns": "4.1.0"
   }
